# ms_dx12_clone

./: CMakeLists.txt  README.md
src/: Utility.cpp  Utility.h  main.cpp  pch.h
src/Graphics/: d3dx12.h
